# uav-onboard

./: .gitignore  ARCHITECTURE_OVERVIEW.md  CMakeLists.txt  PROJECT_SPEC.md  README.md
config/: ardupilot_serial_usb.expected.toml  ardupilot_serial_usb.params  autopilot.toml  logging.toml  mission.toml  network.toml  pixhawk1_usb.expected.toml  pixhawk1_usb.params  pixhawk6c_indoor_flow.expected.toml  pixhawk6c_indoor_flow.params  runtime.ardupilot_serial.toml  runtime.pixhawk1.toml  runtime.sitl.grid.toml  runtime.sitl.toml  safety.toml  vision.toml
docs/: PROTOCOL.md
scripts/: grid_arena_edge_case_test.sh  grid_arena_test.sh  line_tracing_test.sh  setup_gazebo_sitl.sh  setup_rpi_dependencies.sh  sitl_mission_regression.sh
scripts/lib/: gazebo_rendering.sh
sim/gazebo/: README.md
sim/gazebo/models/astroquad_grid_course/: model.config  model.sdf
sim/gazebo/models/astroquad_static_downward_camera/: model.config  model.sdf
sim/gazebo/models/iris_with_downward_camera/: model.config  model.sdf
sim/gazebo/models/line_tracing_course/: model.config  model.sdf
sim/gazebo/params/: indoor_flow_tfmini_sitl.parm
sim/gazebo/worlds/: astroquad_iris_vision.sdf  astroquad_line_camera_fixture.sdf  astroquad_marker_center_fixture.sdf  grid_arena_edge_case_test_world.sdf  grid_arena_test_world.sdf  line_tracing_test_world.sdf
src/: main.cpp  telemetry_main.cpp
src/app/: AstroquadOnboardApp.cpp  AstroquadOnboardApp.hpp  DebugVideoThrottle.hpp  GcsTelemetryPublisher.cpp  GcsTelemetryPublisher.hpp  LatestVideoSender.cpp  LatestVideoSender.hpp  VisionDebugPipeline.cpp  VisionDebugPipeline.hpp  VisionDebugPublisher.cpp  VisionDebugPublisher.hpp
src/autopilot/: AutopilotMavlinkAdapter.cpp  AutopilotMavlinkAdapter.hpp  AutopilotState.hpp  MavlinkTransport.hpp  SerialMavlinkTransport.cpp  SerialMavlinkTransport.hpp  UdpMavlinkTransport.cpp  UdpMavlinkTransport.hpp
src/camera/: CameraFrame.hpp  RpicamMjpegSource.cpp  RpicamMjpegSource.hpp
src/common/: KnownHosts.hpp  NetworkConfig.cpp  NetworkConfig.hpp  Time.cpp  Time.hpp  VisionConfig.cpp  VisionConfig.hpp
src/control/: ControlSetpoint.hpp  GridControlMapper.cpp  GridControlMapper.hpp  GuidedVelocityController.cpp  GuidedVelocityController.hpp
src/logging/: FlightLogger.cpp  FlightLogger.hpp
src/mission/: AltitudePolicy.cpp  AltitudePolicy.hpp  GridCoordinateTracker.cpp  GridCoordinateTracker.hpp  GridMission.cpp  GridMission.hpp  IntersectionDecision.cpp  IntersectionDecision.hpp  LineFollowMission.cpp  LineFollowMission.hpp  MarkerRegistry.cpp  MarkerRegistry.hpp  MarkerRevisitPlanner.cpp  MarkerRevisitPlanner.hpp  SnakePlanner.cpp  SnakePlanner.hpp
src/network/: TelemetryChunker.cpp  TelemetryChunker.hpp  UdpTelemetrySender.cpp  UdpTelemetrySender.hpp
src/protocol/: TelemetryMessage.cpp  TelemetryMessage.hpp
src/safety/: SafetyMonitor.cpp  SafetyMonitor.hpp
src/video/: UdpMjpegStreamer.cpp  UdpMjpegStreamer.hpp  VideoPacket.cpp  VideoPacket.hpp
src/vision/: ArucoDetector.cpp  ArucoDetector.hpp  FakeFrameSource.cpp  FakeFrameSource.hpp  FrameSource.hpp  GazeboCameraSource.cpp  GazeboCameraSource.hpp  IntersectionDetector.cpp  IntersectionDetector.hpp  IntersectionStabilizer.cpp  IntersectionStabilizer.hpp  LineDetector.cpp  LineDetector.hpp  LineMaskBuilder.cpp  LineMaskBuilder.hpp  LineStabilizer.cpp  LineStabilizer.hpp  MarkerStabilizer.cpp  MarkerStabilizer.hpp  OpenCvCameraSource.cpp  OpenCvCameraSource.hpp  RpicamFrameSource.cpp  RpicamFrameSource.hpp  VisionProcessor.cpp  VisionProcessor.hpp  VisionTypes.hpp
tests/: CMakeLists.txt  test_autopilot_poll_drain.cpp  test_autopilot_setpoints.cpp  test_debug_video_throttle.cpp  test_fake_frame_source.cpp  test_flight_logger.cpp  test_grid_control_mapper_pi.cpp  test_grid_mission_entry_origin.cpp  test_guided_velocity_controller.cpp  test_intersection_decision.cpp  test_intersection_detector.cpp  test_intersection_stabilizer.cpp  test_known_hosts.cpp  test_line_follow_mission.cpp  test_line_mask_strategies.cpp  test_line_stabilizer.cpp  test_marker_stabilizer.cpp  test_safety_monitor.cpp  test_serial_mavlink_transport.cpp  test_telemetry_chunker.cpp  test_telemetry_line_json.cpp  test_udp_mavlink_transport.cpp  test_vision_processor.cpp
tools/: aruco_detector_tester.cpp  camera_preview.cpp  grid_image_smoke.cpp  grid_mission_node.cpp  line_detector_tuner.cpp  line_follow_node.cpp  marker_grid_replay.cpp  mavlink_motor_test.cpp  mavlink_probe.cpp  mock_gcs_command.cpp  replay_vision.cpp  video_streamer.cpp  vision_debug_node.cpp
